--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -135,6 +135,28 @@
   margin-bottom: 0.2rem;
 }
 
+.connecting span:nth-child(1) {
+  opacity: 0;
+  animation: fadeIn1 2000ms infinite;
+}
+.connecting span:nth-child(2) {
+  opacity: 0;
+  animation: fadeIn2 2000ms infinite;
+}
+
+@keyframes fadeIn1 {
+    0% { opacity: 0 }
+    30% { opacity: 0 }
+    33% { opacity: 1 }
+    100%{ opacity: 1 }
+}
+@keyframes fadeIn2 {
+    0% { opacity: 0 }
+    64% { opacity: 0 }
+    67% { opacity: 1 }
+    100%{ opacity: 1 }
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
